--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,6 +40,36 @@ body {
   z-index: 1;
 }
 
+@keyframes changecolor {
+  from {
+    color:#c83b3b;
+  }
+
+  to {
+    color: transparent;
+  }
+}
+
+#recording-label {
+  position: fixed;
+  top: 30px;
+  right: 50px;
+  z-index: 1;
+
+  font-family: "Pridi";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 23px;
+  line-height: 87px;
+  color: #c83b3b;
+  
+  animation-duration: 1s;
+  animation-name: changecolor;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
 .svg-container {
   display: inline-block;
   position: relative;
@@ -290,28 +320,187 @@ div#box-legend > div {
   margin-bottom: 20px;
 }
 
-#record-text.helper-text{
+#record-text.helper-text {
   position: static;
-width: 153px;
-height: 20px;
-left: 133.5px;
-top: 220px;
+  width: 153px;
+  height: 20px;
+  left: 133.5px;
+  top: 220px;
 
-/* Inside Auto Layout */
-flex: none;
-order: 1;
-align-self: center;
-margin: 0px 20px;
+  /* Inside Auto Layout */
+  flex: none;
+  order: 1;
+  align-self: center;
+  margin: 0px 20px;
 }
 p.helper-text {
   font-family: Pridi;
-font-style: italic;
-font-weight: normal;
-font-size: 14px;
-line-height: 16px;
-display: flex;
-align-items: center;
-text-align: center;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  text-align: center;
 
-color: #FFFFFF;
+  color: #ffffff;
+}
+
+#record-control {
+  /* Auto Layout */
+  display: flex;
+  flex-direction: row;
+  padding: 20px 0;
+  justify-content: space-evenly;
+
+  position: static;
+  width: 286.52px;
+  height: 37.5px;
+  left: 66.74px;
+  top: 10px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 0;
+  align-self: center;
+  margin: 0px 10px;
+}
+
+#play-button {
+  position: static;
+  width: 60px;
+  height: 60px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 0;
+  align-self: center;
+  margin: 0px 0px;
+}
+#download-button {
+  position: static;
+  width: 48px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 1;
+  align-self: center;
+  margin: 71px 0px;
+}
+
+#download-button g {
+  position: absolute;
+  left: 4.17%;
+  right: 4.17%;
+  top: 4.17%;
+  bottom: 4.17%;
+  fill: white;
+}
+
+#stop-button {
+  position: static;
+  width: 36.52px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 2;
+  align-self: center;
+  margin: 71px 0px;
+}
+
+#stop-button g {
+  fill: #c83b3b;
+}
+
+.recorded-chord {
+  /* Auto Layout */
+  display: flex;
+  flex-direction: row;
+  padding: 0px 10px;
+  justify-content: space-evenly;
+
+  position: static;
+  width: 394px;
+  height: 70px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 1;
+  align-self: center;
+  margin: 0px 10px;
+}
+.drag-chord {
+  position: static;
+  width: 50px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 0;
+  align-self: center;
+  margin: 40px 0px;
+}
+
+.drag-chord g {
+  position: absolute;
+  left: 15.62%;
+  right: 15.62%;
+  top: 37.5%;
+  bottom: 37.5%;
+
+  fill: white;
+  background: white;
+}
+.chord-name {
+  position: static;
+  width: 145px;
+  height: 29px;
+  left: 91px;
+  top: 20.5px;
+
+  font-family: Pridi;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 40px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #ffffff;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 1;
+  align-self: center;
+  margin: 40px 0px;
+}
+
+.chord-play {
+  position: static;
+  width: 40px;
+  height: 40px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 2;
+  align-self: center;
+  margin: 40px 0px;
+}
+.chord-delete {
+  position: static;
+  width: 20px;
+
+  /* Inside Auto Layout */
+  flex: none;
+  order: 3;
+  align-self: center;
+  margin: 40px 0px;
+}
+.chord-delete g {
+  position: absolute;
+  left: 0%;
+  right: 28.57%;
+  top: 28.26%;
+  bottom: 28.26%;
+  fill: #c83b3b;
 }
